# f1_data_engineering

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_raw.py
scripts/: 01_raw.py  02_bronze.py  03_feature_store.py  03_silver.py  04_feature_store.py  04_silver.py  spark_ops.py
sql/: feature_store_drivers.sql  target_champs.sql
